--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 16px 16px 16px 16px;
+  font-size: 22px;
 
   * {
     display: flex;
@@ -46,6 +47,7 @@ header {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+  font-size: 22px;
   .opening {
     align-self: flex-start;
     //font-weight: bold;
@@ -86,6 +88,12 @@ main {
 
   > * {
     margin: 8px;
+  }
+}
+
+.bio {
+  > * {
+    margin-bottom: 0.7em;
   }
 }
 
@@ -130,14 +138,14 @@ aside {
   border-radius: 8px;
 
   .section-heading {
-    border: none;
-    margin: 0 0 16px;
+    border-color: inherit;
+    margin: 0 0 32px;
   }
 }
 
 .id-card {
-  display: flex;
-  gap: 24px;
+  //display: flex;
+  //gap: 24px;
 }
 
 .id-pic {
@@ -147,6 +155,7 @@ aside {
   width: auto;
   height: auto;
   border-radius: 8px;
+  margin: 0 24px 16px 0;
 }
 
 .tricard {
