--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -206,8 +206,19 @@ aside {
 }
 
 .web-resume {
+  margin: 24px -48px;
+  padding: 32px 48px 48px;
+  border-radius: 12px;
+  section {
+    margin: 32px 0;
+  }
+  .experience-card, .skills, .education-card, .hobby-list {
+    margin: 12px 0;
+  }
   ul {
     list-style-type: disc;
+    margin-left: 0;
+    padding-left: 20px;
     //list-style-position: inside;
   }
   .name {
@@ -217,7 +228,11 @@ aside {
     display: flex;
     justify-content: space-between;
   }
-
+  .timespan {
+    font-family: inherit;
+    font-size: 24px;
+    font-style: italic;
+  }
   .skills-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
