Tweak and clean up colors

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,38 +3,30 @@ $accent-hue: $main-hue + 15;
 $accent-hue2: $main-hue + 180;
 
 /* Light scheme and universal colors */
-$main-lightest: hsl($main-hue, 25%, 97%); // #F9F5F5
+$main-lightest: hsl($main-hue, 25%, 97%);
 $main-light: hsl($main-hue, 15%, 93%);
-$main-dark: hsl($main-hue, 10%, 36%); // Original (66% L instead of 46%): #B9989C
+$main-dark: hsl($main-hue, 10%, 36%);
 $main-light-shadow: hsl($main-hue, 15%, 36%, 50%);
-$main-mid-border: hsl($main-hue, 10%, 79%); // rgb(217,199,201) -> hsl(353, 19%, 82%)
-$main-mid: hsl($main-hue, 15%, 49%); // rgb(217,199,201) -> hsl(353, 19%, 82%)
-$accent1-dark: hsl($accent-hue, 67%, 42%); // #25B7B8 -> hsl(180, 67%, 43%)
-$accent2-light: hsl($accent-hue2, 7%, 94%); // hsl(203, 37%, 77%);
-$accent2-dark: hsl($accent-hue2, 47%, 32%); // hsl(203, 67%, 32%); // #25B7B8 -> hsl(180, 67%, 43%)
+$main-mid-border: hsl($main-hue, 10%, 79%);
+$main-mid: hsl($main-hue, 15%, 49%);
+$accent1-dark: hsl($accent-hue, 67%, 42%);
+$accent2-light: hsl($accent-hue2, 7%, 94%);
+$accent2-dark: hsl($accent-hue2, 47%, 32%);
 
 /* Dark scheme-only colors */
-$main-darkest: hsl($main-hue, 10%, 25%); // Original (66% L instead of 46%): #B9989C
-$main-darker: hsl($main-hue, 8%, 34%); // Original (66% L instead of 46%): #B9989C
+$main-darkest: hsl($main-hue, 10%, 22%);
+$main-darker: hsl($main-hue, 8%, 30%);
 $main-dark-shadow: hsl($main-hue, 5%, 15%, 50%);
 $main-dark-light: hsl($main-hue, 10%, 83%);
+$main-dark-border: hsl($main-hue, 10%, 63%);
 $accent1-light: hsl($accent-hue, 87%, 72%);
 $accent2-mid: hsl($accent-hue2, 46%, 62%);
 $accent2-darker: hsl($accent-hue2, 52%, 15%);
 
-@mixin dark_color {
-  background-color: $main-darkest;
-  color: $main-dark-light;
-}
-
-@mixin light_color {
-  background-color: $main-light;
-  color: $main-dark;
-}
-
 :root {
   color-scheme: light dark;
-  @include light_color;
+  background-color: $main-light;
+  color: $main-dark;
 }
 
 a {
@@ -74,7 +66,6 @@ header {
 }
 
 .popout {
-  //@include dark_color;
   background-color: $main-dark;
   color: $main-light;
 }
@@ -112,7 +103,8 @@ header {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    @include dark_color;
+    background-color: $main-darkest;
+    color: $main-dark-light;
   }
 
   a {
@@ -126,7 +118,7 @@ header {
 
   header {
     background-color: $main-darkest;
-    border-bottom: 2px solid $main-mid-border;
+    border-bottom: 2px solid $main-dark-border;
 
     .left {
       border: 2px solid $accent1-light;
@@ -134,7 +126,7 @@ header {
   }
 
   .section-heading {
-    border-bottom: 2px solid $main-mid-border;
+    border-bottom: 2px solid $main-dark-light;
   }
 
   .hero {
@@ -152,7 +144,6 @@ header {
   }
 
   .popout {
-    //@include light_color;
     background-color: $main-dark-light;
     color: $main-darkest;
   }
@@ -163,7 +154,7 @@ header {
 
   .card {
     background-color: $main-darker;
-    border: 3px solid $main-dark-light;
+    border: 3px solid $main-dark-border;
     .icon-button-container {
       background-color: $accent1-light;
       color: $main-darkest;
@@ -176,7 +167,7 @@ header {
 
   .web-resume {
     background-color: $main-darker;
-    border: 3px solid $main-dark-light;
+    border: 3px solid $main-dark-border;
     h2 {
       border-bottom: 2px solid $main-dark-light;
     }
